fix contact section alignment issue

--- a/css/index.css
+++ b/css/index.css
@@ -506,7 +506,6 @@ img.img-article {
 }
 
 .contact .row {
-  width : 100%;
   margin-top :50px;
   margin-bottom :25px;
   padding-top : 30px;
@@ -526,7 +525,8 @@ img.img-article {
 }
 
 .social {
-  margin-right : 20px;
+  margin-left : 10px;
+  margin-right : 10px;
   margin-bottom : 20px;
   display : inline-block;
   width : 254px;
